--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   pointycastle: ^3.9.1
   ed25519_hd_key: ^2.2.1
   bip39: ^1.0.6
+  bip32: ^2.0.0
   crypto: ^3.0.3
   convert: ^3.1.1
   bs58: ^1.0.2
