--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   solana_borsh: ^0.0.1
   borsh: ^0.3.1+4
   borsh_annotation: ^0.3.1+5
+  base_x: ^2.0.1
 
 dev_dependencies:
   flutter_test:
