--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   borsh: ^0.3.1+4
   borsh_annotation: ^0.3.1+5
   base_x: ^2.0.1
+  qr_flutter: ^4.1.0
+  share_plus: ^7.2.2
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
