--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   qr_flutter: ^4.1.0
   share_plus: ^7.2.2
   path_provider: ^2.1.2
+  encrypt: ^5.0.3
+  asn1lib: ^1.0.1
+  basic_utils: ^5.7.0
 
 dev_dependencies:
   flutter_test:
