--- a/android/solana/build.gradle
+++ b/android/solana/build.gradle
@@ -19,8 +19,9 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
             multiDexEnabled true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -36,12 +37,13 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.21"
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'org.bitcoinj:bitcoinj-core:0.15.10'
     implementation 'net.i2p.crypto:eddsa:0.3.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.9.0"
-    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     implementation ("org.sol4k:sol4k:0.4.0")
 }
