--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   dio: ^5.4.3+1
   get: ^4.6.6
   get_storage: ^2.1.1
-  connectivity_plus: ^6.0.3
+#  connectivity_plus: ^6.0.5
   another_flushbar: ^1.12.30
   flutter_svg: ^2.0.10+1
   flutter_secure_storage: ^9.0.0
