--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,6 +1,3 @@
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-android.disableAutomaticComponentCreation=true
-android.suppressUnsupportedCompileSdk=34
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/openjdk-11.jdk/Contents/Home
