--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   asn1lib: ^1.0.1
   basic_utils: ^5.7.0
   intl: ^0.19.0
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
