--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   basic_utils: ^5.7.0
   intl: ^0.19.0
   local_auth: ^2.3.0
+  file_picker: ^8.1.5
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
