--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   local_auth: ^2.3.0
   file_picker: ^8.1.5
   uuid: ^4.5.1
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
