--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  dio: ^5.4.3+1
+  dio: ^5.7.0
   get: ^4.6.6
   get_storage: ^2.1.1
 #  connectivity_plus: ^6.0.5
@@ -51,11 +51,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.2
-  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.2
 
 flutter_icons:
-  image_path: "assets/images/img_logo.png"
+  image_path: "assets/images/img_logo.jpg"
   android: true
   ios: true
 
